--- a/style/style.css
+++ b/style/style.css
@@ -1380,6 +1380,21 @@ body.dark-theme{
 }
 
 
+#preloader{
+    background: #fff;
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    z-index: 9999;
+    color: #fff;
+    font-size: 4rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#preloader img{
+    width: 100px;
+}
 /* ========================================================== */
 /* ===================== PORTFOLIO PAGE ===================== */
 /* ========================================================== */
