--- a/style/style.css
+++ b/style/style.css
@@ -6,7 +6,7 @@
     --header-height: 3.5rem;
 
     /*============== colors ===================*/
-    /*= Color mode HSL(hue, saturation, lightness */
+    /*= Color mode HSLhue, saturation, lightness */
     --first-color: hsl(207, 65%, 65%);
     --title-color: hsl(207, 4%, 16%);
     --text-color: hsl(207, 4%, 28%);
@@ -86,6 +86,15 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+}
+
+::-webkit-scrollbar{
+    width: 5px;
+    background: rgba(0,0,0,0.3);
+}
+::-webkit-scrollbar-thumb{
+    background: #FF3131;
+    border-radius: 25px;
 }
 
 html {
@@ -1348,6 +1357,9 @@ body.dark-theme{
 
 }
 
+/* ============================================= */
+/* ================== SCROLL =================== */
+/* ============================================= */
 .scrollup{
     background: var(--scroll-up-background);
     position: fixed;
@@ -1379,7 +1391,9 @@ body.dark-theme{
     }
 }
 
-
+/* ============================================= */
+/* ================= PRELOADER ================= */
+/* ============================================= */
 #preloader{
     background: var(--body-color);
     height: 100vh;
@@ -1395,10 +1409,10 @@ body.dark-theme{
 #preloader img{
     width: 100px;
 }
+
 /* ========================================================== */
 /* ===================== PORTFOLIO PAGE ===================== */
 /* ========================================================== */
-
 .lightBox{
     position: fixed;
     top: 0;
