--- a/style/style.css
+++ b/style/style.css
@@ -439,7 +439,7 @@ body.dark-theme{
     padding: 13px 23px;
     font-size: var(--h3-font-size);
     font-family: var(--body-font);
-    font-weight: var(--font-semi-bold);
+    font-weight: var(--font-medium);
     letter-spacing: 1px;
     color: #fff;
     cursor: pointer;
@@ -600,25 +600,33 @@ body.dark-theme{
     color: var(--title-color);
 }
 
-.about__right-box button {
+.about__right-box button{
     border: none;
     outline: none;
-    padding: 13px 20px;
-    font-size: var(--h3-font-size);
-    font-family: var(--body-font);
-    font-weight: var(--font-semi-bold);
-    letter-spacing: 1px;
-    color: #fff;
     cursor: pointer;
-    transition: all .2s ease;
-    background-color: var(--active-color);
-    width: 35%;
+    transition: all .3s ease;
     align-items: center;
     justify-content: center;
     display: flex;
-    gap: .1rem;
+    width: 32%;
+    height: 3rem;
     box-shadow: var(--box-shadow);
+    background-color: var(--active-color);
     position: relative;
+}
+
+.about__right-box button a{
+    color: #fff;
+    font-size: var(--h3-font-size);
+    font-family: var(--body-font);
+    font-weight: var(--font-medium);
+    letter-spacing: 1px;
+    width: 100%;
+    height: 100%;
+    gap: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .about__right-box button:active {
